<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- App -->
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Android photoshop</string>
    
    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>    
    
    <!-- Preferences -->
    <string name="pref_category">Category</string>
    <string name="color1_title">Color 1</string>
    <string name="color1_summary">black color by default, set by reference</string>
    <string name="color2_title">Color 2</string>
    <string name="color2_summary">not persistent color\nalpha slider added via code</string>
    <string name="color3_title">Color 3</string>
    <string name="color3_summary">picker with alpha slider</string>
    <string name="color4_title">Color 4</string>
    <string name="color4_summary">color set with HEX code in xml</string>
    
    <!--  Elements -->
    <string name="button_load">Ucitaj sliku</string>
    <string name="button_save">Sacuvaj</string>
    <string name="button_histogramimage">Histogram</string>
    <string name="button_histogramcamera">Histogram</string>
    <string name="message">Dobrodosli! Ovo je android aplikacija za obradu slika.</string>
    <string name="img">Glavna slika</string>
    <string name="img_invert">Filter</string>
    <string name="text_invert">Invert</string>
    <string name="text_black_white">BlackWhite</string>
    <string name="text_brightness">Brightness</string>
    <string name="text_contrast">Contrast</string>
    <string name="text_flip_vertical">FlipVert.</string>
    <string name="text_flip_horizontal">FlipHorizon.</string>
    <string name="text_grayscale">Grayscale</string>
    <string name="text_gamma">Gamma</string>
    <string name="text_colorRGB">ColorRGB</string>
    <string name="text_saturation">Saturation</string>
    <string name="text_hue">Hue</string>
    <string name="text_multiply">Multiply</string>
    <string name="text_difference">Difference</string>
    <string name="text_lighter">Lighter</string>    
    <string name="text_darker">Darker</string>    
    <string name="text_shading">Shading</string>
    <string name="text_blur">Blur</string>
    <string name="text_blend">Blend</string>
    <string name="text_gausian_blur">GausianBlur</string>
    <string name="text_sharpen">Sharpen</string>
    <string name="text_edge">Edge</string>
    <string name="text_emboss">Emboss</string>
    <string name="text_engraving">Engraving</string>
    <string name="text_smooth">Smooth</string>
    <string name="text_original">Original</string>
    <string name="text_close">Close</string>
    <string name="text_color_picker">ColorPicker</string>
    <string name="text_filteri">Filteri</string>
    <string name="text_operacije">Operacije</string>
    <string name="text_grafici">Grafici</string>
    <string name="text_filters_graphics">Filteri</string>
    <string name="text_operations_graphics">Operacije</string>
    <string name="text_gausian_blur_graphics">GausianBlur</string>
    <string name="text_bw">Odaberite skalu za primenu crno-belog filtera:</string>
    <string name="text_brightness_text">Odaberite vrednost osvetljaja koji ce biti primenjen na slici:</string>
    <string name="text_contrast_text">Odaberite vrednost kontrasta koji ce biti primenjen na slici:</string>
    <string name="text_gamma_text">Odaberite vrednost gama parametra koji ce biti primenjen na slici:</string>
	<string name="text_color_text">Odaberite vrednost R, G i B parametara koji ce biti primenjeni na slici:</string>
	<string name="text_saturation_text">Odaberite vrednost saturation-a koji ce biti primenjen na slici:</string>
	<string name="text_hue_text">Odaberite vrednost hue parametra koji ce biti primenjen na slici:</string>
	<string name="text_gausianBlur_text">Odaberite vrednost sigma parametra koji ce biti primenjen na slici:</string>
	<string name="text_blend_text">Odaberite vrednost alfa parametra koji ce biti primenjen na slikama:</string>
</resources>